Think this should be in gitignore?

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ crashlytics-build.properties
 /Assets/StreamingAssets/aa.meta
 /Assets/StreamingAssets/aa/*
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
+UserSettings/EditorUserSettings.asset
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
+UserSettings/Layouts/default-2022.dwlt
