--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 /[Ll]ibrary/
-Temp/
-Obj/
-Build/
-Builds/
-Logs/
+/Temp/
+/Obj/
+/Build/
+/Builds/
+/Logs/
 /[Uu]serSettings/
 
 # MemoryCaptures can get excessive in size.
@@ -71,6 +71,5 @@ crashlytics-build.properties
 /Assets/StreamingAssets/aa.meta
 /Assets/StreamingAssets/aa/*
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
-UserSettings/EditorUserSettings.asset
-Logs/shadercompiler-UnityShaderCompiler.exe0.log
 UserSettings/Layouts/default-2022.dwlt
+UserSettings/EditorUserSettings.asset
