--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Scripts\TCPServer.cs" />
+    <Compile Include="Assets\Scripts\UINotification.cs" />
     <Compile Include="Assets\ROVController.cs" />
     <Compile Include="Assets\Scripts\UIGeneral.cs" />
     <Compile Include="Assets\Scripts\DataObject.cs" />
