UI data good, working on ROV

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,12 @@ crashlytics-build.properties
 /Logs/shadercompiler-UnityShaderCompiler.exe0.log
 /UserSettings/Layouts/default-2022.dwlt
 /UserSettings/EditorUserSettings.asset
+Python/.idea/copilot/chatSessions/00000000000.xd
+Python/.idea/copilot/chatSessions/blobs/version
+Python/.idea/copilot/chatSessions/xd.lck
+Python/.idea/inspectionProfiles/profiles_settings.xml
+Python/.idea/misc.xml
+Python/.idea/modules.xml
+Python/.idea/Python.iml
+Python/.idea/vcs.xml
+Python/.idea/workspace.xml
