--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,13 +60,18 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.19f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\UIAxisRenderer.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Scripts\TCPServer.cs" />
     <Compile Include="Assets\Scripts\BatteryIcon.cs" />
     <Compile Include="Assets\Scripts\UINotification.cs" />
+    <Compile Include="Assets\Scripts\UIGridRenderer.cs" />
+    <Compile Include="Assets\Scripts\DataManager.cs" />
     <Compile Include="Assets\Scripts\ROVController.cs" />
+    <Compile Include="Assets\Scripts\UILineRenderer.cs" />
     <Compile Include="Assets\Scripts\UIGeneral.cs" />
     <Compile Include="Assets\Scripts\ROVMetrics.cs" />
+    <Compile Include="Assets\Scripts\DataLink.cs" />
     <Compile Include="Assets\Scripts\UIDepth.cs" />
     <Compile Include="Assets\Scripts\DataObject.cs" />
   </ItemGroup>
