Dynamic notifications Done
Unfortunately this is not the most elegant way to solve this, it could be done with events and event listeners. But we are short on time and I dont know those systems yet.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Assets\Scripts\DataManager.cs" />
     <Compile Include="Assets\Scripts\ROVController.cs" />
     <Compile Include="Assets\Scripts\UILineRenderer.cs" />
-    <Compile Include="Assets\Scripts\UIGeneral.cs" />
+    <Compile Include="Assets\Scripts\UIBattery.cs" />
     <Compile Include="Assets\Scripts\ROVMetrics.cs" />
     <Compile Include="Assets\Scripts\DataLink.cs" />
     <Compile Include="Assets\Scripts\UIDepth.cs" />
